# shine2mqtt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTIONS.md  Dockerfile  README.md  config.example.yaml  docker-compose.example.yaml  pyproject.toml  sonar-project.properties
.github/: copilot-instructions.md
.github/scripts/: verify_tag_matches_pyproject_version.py
.github/workflows/: ci.yml  continuous-integration.yaml  feature.yaml  main.yaml  pr-checks.yml  pull-request.yaml  release.yaml  release.yml
docs/: protocol.md
scripts/: analyze_captures.py
src/shine2mqtt/: __init__.py  __main__.py  cli.py  config.py  logger.py
src/shine2mqtt/adapters/api/: api.py  dependencies.py  http_exceptions.py
src/shine2mqtt/adapters/api/datalogger/: mappers.py  models.py  router.py
src/shine2mqtt/adapters/api/inverter/: mappers.py  models.py  router.py
src/shine2mqtt/adapters/hass/: config.py  discovery.py  discovery_mapper.py  map.py
src/shine2mqtt/adapters/mqtt/: bridge.py  bridge2.py  client.py  config.py  mapper.py  processor.py  publisher.py  subscriber.py
src/shine2mqtt/api/: api.py  constants.py  dependencies.py
src/shine2mqtt/api/datalogger/: mappers.py  models.py  router.py
src/shine2mqtt/api/inverter/: mappers.py  models.py  router.py
src/shine2mqtt/app/: app.py  command_executor.py  command_router.py  exceptions.py  logger.py  queues.py
src/shine2mqtt/app/cli/: converter.py  parser.py
src/shine2mqtt/app/config/: config.py  file.py  loader.py
src/shine2mqtt/app/handlers/: read_register.py  send_raw_frame.py  write_register.py
src/shine2mqtt/domain/commands/: commands.py
src/shine2mqtt/domain/events/: base.py  events.py
src/shine2mqtt/domain/interfaces/: registery.py  registry.py  session.py
src/shine2mqtt/domain/models/: config.py  datalogger.py  inverter.py
src/shine2mqtt/growatt/client/: client.py  config.py  generator.py  simulate.py  transport.py
src/shine2mqtt/growatt/client/data/: generator.py
src/shine2mqtt/growatt/client/protocol/: factory.py  generator.py  handler.py  loader.py  session.py  state.py
src/shine2mqtt/growatt/protocol/: config.py  constants.py  event.py
src/shine2mqtt/growatt/protocol/ack/: ack.py  decoder.py  encoder.py
src/shine2mqtt/growatt/protocol/announce/: announce.py  decoder.py  encoder.py
src/shine2mqtt/growatt/protocol/base/: decoder.py  decoder_registry.py  encoder.py  encoder_registry.py  message.py
src/shine2mqtt/growatt/protocol/crc/: encoder.py
src/shine2mqtt/growatt/protocol/data/: data.py  decoder.py  encoder.py
src/shine2mqtt/growatt/server/: server.py  session.py
src/shine2mqtt/growatt/sim/: datalogger.py
src/shine2mqtt/hass/: config.py  discovery.py  map.py
src/shine2mqtt/infra/server/: registry.py  server.py  session.py
src/shine2mqtt/infrastructure/client/: client.py  transport.py
src/shine2mqtt/infrastructure/server/: server.py  session.py
src/shine2mqtt/main/: app.py  command_executor.py  logger.py
src/shine2mqtt/main/cli/: converter.py
src/shine2mqtt/main/config/: config.py  file.py
src/shine2mqtt/mqtt/: bridge.py  processor.py
src/shine2mqtt/protocol/client/: client.py  transport.py
src/shine2mqtt/protocol/codec/: byte.py
src/shine2mqtt/protocol/frame/: constants.py  decoder.py  encoder.py  factory.py  validator.py
src/shine2mqtt/protocol/messages/: constants.py  message.py
src/shine2mqtt/protocol/protocol/: config.py  constants.py
src/shine2mqtt/protocol/server/: server.py  session.py
src/shine2mqtt/protocol/session/: base.py  factory.py  initializer.py  mapper.py  message_factory.py  registry.py  response_tracker.py  session.py  state.py
src/shine2mqtt/protocol/settings/: constants.py  registry.py
src/shine2mqtt/protocol/simulator/: config.py  constants.py  factory.py  generator.py  handler.py  session.py  state.py
src/shine2mqtt/util/: __init__.py  clock.py  conversions.py  dicttools.py  strings.py
tests/unit/adapters/hass/: test_discovery.py
tests/unit/app/cli/: test_converter.py  test_parser.py
tests/unit/app/config/: test_config.py  test_file.py
tests/unit/hass/: test_config.py  test_discovery.py
tests/unit/main/cli/: test_converter.py
tests/unit/main/config/: test_config.py  test_file.py
tests/unit/protocol/codec/: test_byte_encoder.py
tests/unit/protocol/session/: test_state.py
tests/unit/protocol/settings/: test_config_registry.py
tests/unit/protocol/simulator/: test_session.py  test_state.py
tests/unit/util/: test_clock.py  test_dicttools.py
tests/utils/: loader.py
(+236 files in other folders)
