[project]
name = "shine2mqtt"
version = "0.1.0"
authors = [{ name = "Bram Harmsen", email = "crazed-lint-kisser@duck.com" }]
description = "A local Growatt server which listens to your Shine Wifi-X datalogger and publishes to MQTT"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICENSE"]
dependencies = [
  "aiomqtt>=2.5.0",
  "fastapi>=0.128.0",
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.0.0",
  "pyyaml>=6.0.3",
  "uvicorn>=0.40.0",
]
[dependency-groups]
dev = [
  # Overrides
  # transient dependency of pip-audit, pip 25.03 contains CVE-2026-1703
  "pip>=26.0",
  # regular dependencies
  "pip-audit>=2.10.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.14",
  "ty>=0.0.13",
  "import-linter>=2.10",
]

[project.urls]
Homepage = "https://github.com/bremme/shine2mqtt"
Issues = "https://github.com/bremme/shine2mqtt/issues"

[project.scripts]
shine2mqtt = "shine2mqtt.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tools ################################################################################

# [tool.uv]

[tool.hatch.build.targets.wheel]
packages = ["src/shine2mqtt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "--import-mode=importlib",
  "--cov=shine2mqtt",
  "--cov-report=xml",
  "--cov-report=term",
  "-vv",
]

# [tool.pytest.coverage.run]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# E (pycodestyle), F (pyflakes), W (pycodestyle warnings), I (isort), B (flake8-bugbear), UP (flake8-pytest-style)
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]

[tool.ty]


[tool.importlinter]
root_package = "shine2mqtt"

[[tool.importlinter.contracts]]
name = "domain does not import from other packages"
type = "forbidden"
source_modules = ["shine2mqtt.domain"]
forbidden_modules = [
    "shine2mqtt.protocol",
    "shine2mqtt.infrastructure",
    "shine2mqtt.adapters",
    "shine2mqtt.app",
    "shine2mqtt.main",
    "shine2mqtt.util",
]

[[tool.importlinter.contracts]]
name = "util does not import from other packages"
type = "forbidden"
source_modules = ["shine2mqtt.util"]
forbidden_modules = [
    "shine2mqtt.domain",
    "shine2mqtt.protocol",
    "shine2mqtt.infrastructure",
    "shine2mqtt.adapters",
    "shine2mqtt.app",
    "shine2mqtt.main",
]

[[tool.importlinter.contracts]]
name = "infrastructure does not import from protocol, adapters, app or main"
type = "forbidden"
source_modules = ["shine2mqtt.infrastructure"]
forbidden_modules = [
    "shine2mqtt.protocol",
    "shine2mqtt.adapters",
    "shine2mqtt.app",
    "shine2mqtt.main",
]
# Known architecture debt: server/client layers are currently coupled to protocol.
# These should be cleaned up by moving frame decoding and session creation to protocol/.
ignore_imports = [
    "shine2mqtt.infrastructure.client.client -> shine2mqtt.protocol.simulator.config",
    "shine2mqtt.infrastructure.client.client -> shine2mqtt.protocol.simulator.factory",
    "shine2mqtt.infrastructure.client.client -> shine2mqtt.protocol.simulator.session",
    "shine2mqtt.infrastructure.client.transport -> shine2mqtt.protocol.frame.constants",
    "shine2mqtt.infrastructure.client.transport -> shine2mqtt.protocol.frame.decoder",
]

[[tool.importlinter.contracts]]
name = "protocol does not import from adapters, app or main"
type = "forbidden"
source_modules = ["shine2mqtt.protocol"]
forbidden_modules = [
    "shine2mqtt.adapters",
    "shine2mqtt.app",
    "shine2mqtt.main",
]

[[tool.importlinter.contracts]]
name = "adapters does not import from infrastructure, protocol or main"
type = "forbidden"
source_modules = ["shine2mqtt.adapters"]
forbidden_modules = [
    "shine2mqtt.infrastructure",
    "shine2mqtt.protocol",
    "shine2mqtt.main",
]
ignore_imports = [
    "shine2mqtt.adapters.api.dependencies -> shine2mqtt.protocol.session.registry",
    "shine2mqtt.adapters.api.inverter.models -> shine2mqtt.protocol.frame.header.header",
]

[[tool.importlinter.contracts]]
name = "app does not import from infrastructure, protocol, adapters or main"
type = "forbidden"
source_modules = ["shine2mqtt.app"]
forbidden_modules = [
    "shine2mqtt.infrastructure",
    "shine2mqtt.protocol",
    "shine2mqtt.adapters",
    "shine2mqtt.main",
]

